# corrodoro

./: Cargo.toml  README.md
src/: animations.rs  app.rs  args.rs  event.rs  main.rs  net.rs  notification.rs  pomodoro.rs  protocol.rs  state.rs  tui.rs  ui.rs
src/app/: net.rs
src/net/: client.rs  protocol.rs  server.rs
src/tui/: animation.rs  render.rs  widgets.rs
