[package]
name = "pomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.26.1"
itertools = "0.10.5"
notify-rust = "4.8.0"
rodio = "0.17.1"
tui = "0.19.0"
unicode-segmentation = "1.10.1"
