[package]
name = "corrodoro"
version = "0.6.1"
edition = "2021"
description = "A terminal-ui pomodoro timer where your friends can join you focusing via network."
license = "MIT OR Apache-2.0"
keywords = ["pomodoro", "focus", "tui", "network", "timer"]
categories = ["command-line-utilities"]
repository = "https://github.com/Spickelbing/corrodoro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
itertools = "0.10.5"
notify-rust = "4.8.0"
rand = "0.8.5"
rodio = "0.17.1"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tui = "0.19.0"
unicode-segmentation = "1.10.1"
url = "2.3.1"
zwiesel = "0.1.0"
